# cybir

./: .buildinfo  .gitignore  CLAUDE.md  README.md  cybir.core.build_gv.html  cybir.core.classify.html  cybir.core.coxeter.html  cybir.core.ekc.html  cybir.core.flop.html  cybir.core.graph.html  cybir.core.gv.html  cybir.core.html  cybir.core.patch.html  cybir.core.types.html  cybir.core.util.html  cybir.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: cybir.core.build_gv.doctree  cybir.core.classify.doctree  cybir.core.coxeter.doctree  cybir.core.doctree  cybir.core.ekc.doctree  cybir.core.flop.doctree  cybir.core.graph.doctree  cybir.core.gv.doctree  cybir.core.patch.doctree  cybir.core.types.doctree  cybir.core.util.doctree  cybir.doctree  environment.pickle  index.doctree
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
_sources/: cybir.core.classify.rst  cybir.core.ekc.rst  cybir.core.rst  cybir.core.types.rst  cybir.core.util.rst  cybir.rst
cybir/: __init__.py
documentation/: Makefile
notebooks/: h11_2_survey.html  h11_2_survey.ipynb  h11_2_walkthrough.html  h11_2_walkthrough.ipynb  h11_3_survey.ipynb  h11_3_walkthrough.html  h11_3_walkthrough.ipynb
tests/: compare_bfs.py  compare_bfs_results.jsonl  compare_h11_4.py  compare_h11_4_results.jsonl  compare_orbit.py  compare_orbit_results.jsonl  conftest.py  generate_ground_truth.py  generate_snapshots.py  profile_bfs_detail.py  profile_bfs_detail_results.jsonl  profile_h11_2.py  profile_h11_2_results.jsonl  profile_max_deg.py  (+16 more)
(+154 files in other folders)
